Added tsung stats and pushing to circonus

--- a/package.json
+++ b/package.json
@@ -3,8 +3,10 @@
     "version": "0.0.1",
     "main": "main.js",
     "dependencies": {
+        "cheerio": "latest",
         "mu2": "latest",
         "optimist": "latest",
-        "redis": "latest"
+        "redis": "latest",
+        "request": "latest"
     }
 }
